# TensorHive

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  authorization.py  gpu_monitoring.py  hosts_config.ini  main_config.ini  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  ssh_to_myself.txt  test
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: README.md  REDME.md
examples/PyTorch/: README.md  distributed.patch
examples/TF_CONFIG/: README.md
examples/TensorFlowV2_CNN_MNIST/: README.md
examples/TensorFlow_ClusterSpec/: README.md
examples/deepspeech/: Dockerfile  README.md  deepspeech_benchmarking.patch  ds.yaml  template-ds.sh
examples/inception/: README.md
examples/kubernetes/: README.md
examples/t2t_transformer/: Dockerfile  README.md  t2t.yaml  template-t2t.sh  tensor2tensor_benchmarking.patch
migrations/: env.py  generate_rdb.js
migrations/versions/: 040d8d5fc7bc_.py  06ce06e9bb85_add_is_cancelled_column_to_the_.py  131eb148fd57_add_task_table.py  1eb0259b6faf_.py  7110c972b137_remove_unique_constraint_from_is_.py  72fb5b78625f_add_is_default_column_to_the_groups_.py  (+4 more)
tensorhive/: RRDHandler.py  TensorHiveManager.py  __init__.py  __main__.py  authorization.py  cli.py  config.py  database.py  db_seed.py  db_seeds.py  default_config.ini  exemplaryDbSet.py  gpu_monitoring.py  hosts_config.ini  mailbot_config.ini  main_config.ini  management.py  monitoring.py  send_mail.py  serving.py  snippet.py  ssh_config.py  test_database.sqlite
tests/: conftest.py  test_dummy.py
(+340 files in other folders)
