[metadata]
description-file = README.md

[flake8]
max-line-length = 119
ignore = F401,E731
# F401 - Module imported but unused
# E731 - Do not assign lambda expression, use a def
# Source: https://lintlyci.github.io/Flake8Rules/
exclude = tensorhive/snippet.py,tensorhive/app/web/dev/node_modules/

[mypy]
python_version = 3.6
ignore_missing_imports = True
strict_optional = False
show_none_errors = False
